--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
     <script type="text/javascript" src="/static/map/1.2/TextIconOverlay_min.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/map/1.2/MarkerClusterer_min.js" charset="utf-8"></script>
     <!--加载鼠标绘制工具-->
-    <script type="text/javascript" src="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/jquery.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/LuShu.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/DistanceTool.min.js" charset="utf-8"></script>
-	<link rel="stylesheet" href="http://api.map.baidu.com/library/DrawingManager/1.4/src/DrawingManager_min.css" />
     
-    <title>车辆管理系统</title>
+    <title>电气管理系统</title>
 </head>
 <body>
 
