--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--加载鼠标绘制工具-->
     <script type="text/javascript" src="/static/jquery.min.js" charset="utf-8"></script>
     
-    <title>电气管理系统</title>
+    <title>气表物联网云平台</title>
 </head>
 <body>
 
