--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
      <!--图标--> 
 	<!--<link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">-->
 	<!--地图-->
-	<script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=hHkEWGGOHGd0wgGPMIU8ElbUI46BRB8R" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/map/1.2/TextIconOverlay_min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/static/map/1.2/MarkerClusterer_min.js" charset="utf-8"></script>
+	<!-- <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=2.0&ak=hHkEWGGOHGd0wgGPMIU8ElbUI46BRB8R" charset="utf-8"></script> -->
+    <!-- <script type="text/javascript" src="/static/map/1.2/TextIconOverlay_min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/map/1.2/MarkerClusterer_min.js" charset="utf-8"></script> -->
     <!--加载鼠标绘制工具-->
     <script type="text/javascript" src="/static/jquery.min.js" charset="utf-8"></script>
     
